--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "jambon",
   "version": "1.0.0",
   "description": "A collaborative software for live music (jam) sessions",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "browserify client.js -o static/dist/bundle.js", 
+    "test": "echo \"Error: no test specified\" && exit 1", 
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +19,12 @@
   },
   "homepage": "https://github.com/mugulmd/jambon#readme",
   "dependencies": {
+    "@teamwork/websocket-json-stream": "^2.0.0",
+    "browserify": "^17.0.0",
     "express": "^4.17.1",
-    "socket.io": "^4.4.0"
+    "reconnecting-websocket": "^4.4.0",
+    "sharedb": "^2.2.0",
+    "tone": "^14.7.77",
+    "ws": "^8.3.0"
   }
 }
