--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A collaborative software for live music (jam) sessions",
   "main": "server.js",
   "scripts": {
-    "build": "browserify client.js -o static/dist/bundle.js",
+    "build": "browserify client/index.js -o static/dist/bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
